--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>castaway-java</name>
+	<name>castaway</name>
 	<comment>Project castaway-java created by Buildship.</comment>
 	<projects>
 	</projects>
